Implemented fruit shop solution