@@ -1,19 +1,23 @@
 package core.basesyntax.serviceimpl;
 
 import core.basesyntax.service.FileReader;
-import java.io.BufferedReader;
+
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 
 public class FileReaderImpl implements FileReader {
     @Override
     public List<String> read(String fileName) {
-        try (BufferedReader reader = Files.newBufferedReader(Paths.get(fileName))) {
-            return reader.lines().toList();
+        if (fileName == null || fileName.trim().isEmpty()) {
+            throw new RuntimeException("File path must be provided and cannot be empty");
+        }
+        Path path = Path.of(fileName);
+        try {
+            return Files.readAllLines(path);
         } catch (IOException e) {
-            throw new RuntimeException("Can't read file " + fileName, e);
+            throw new RuntimeException("Failed to read file: " + fileName, e);
         }
     }
 }
